// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Chip  renders default chip 1`] = `
<button
  class="p-chip"
  data-testid="chip"
  type="button"
>
  <span
    class="p-chip__value"
  >
    positive
  </span>
</button>
`;

exports[`Chip  renders lead-value chip 1`] = `
<button
  class="p-chip"
  data-testid="chip"
  type="button"
>
  <span
    class="p-chip__lead"
  >
    OWNER
  </span>
  <span
    class="p-chip__value"
  >
    Bob
  </span>
</button>
`;
